fix(rekyc-form): update proof list grid col width and gap

--- a/src/assets/forms/rekyc/rekyc.css
+++ b/src/assets/forms/rekyc/rekyc.css
@@ -417,7 +417,14 @@ body {
 
   .proof_details {
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: 20% 80%;
+    row-gap: 1rem;
+
+    .proof_list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
   }
 
   .aus_sign_container {
